config: fixed manifest and scrollbar style

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,13 @@
+body {
+    &::-webkit-scrollbar {
+        width: 5px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: #ff1744;
+        border-radius: 3em;
+    }
+}
+
 html,
 body,
 #___gatsby {
